--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,6 @@
     <string name="application_id">Application ID</string>
     <string name="master_key">Master Key</string>
     <string name="server_url">Server URL</string>
+    <string name="empty_state_short">No Parse Apps</string>
+    <string name="empty_state_long">It looks a little empty here. Add your first Parse App by tapping the + icon below.</string>
 </resources>
