Added on fetch schema error screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="empty_state_schemas_screen_long">There may have been an error. We didn\'t find any schemas.</string>
     <string name="empty_state_objects_screen_short">No Objects yet</string>
     <string name="empty_state_objects_screen_long">We didn\'t find any parse objects in this class.</string>
+    <string name="schemas_screen_error_title">Error fetching schemas</string>
     <string name="copied_to_clipboard">Copied to clipboard</string>
 </resources>
