--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Parse Dashboard</string>
-    <string name="action_settings">Settings</string>
+
     <string name="title_activity_parse_table">ParseTableActivity</string>
     <string name="title_activity_parse_object">ParseObjectActivity</string>
     <string name="title_activity_main">Parse Dashboard</string>
@@ -21,6 +21,8 @@
     <string name="error_app_id_missing">App ID must not be empty</string>
     <string name="error_master_key_missing">Master key must not be empty</string>
 
-    <string name="action_edit">edit</string>
-    <string name="action_remove">remove</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_edit">Edit</string>
+    <string name="action_remove">Remove</string>
+    <string name="action_refresh">Refresh</string>
 </resources>
